manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: crisco
spec:
  selector:
    app: crisco
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
